tests/ui/higher-ranked/trait-bounds/hrtb-higher-ranker-supertraits.stderr
error[E0277]: the trait bound `for<'tcx> F: Foo<'tcx>` is not satisfied
  --> $DIR/hrtb-higher-ranker-supertraits.rs:18:26
   |
LL |     want_foo_for_any_tcx(f);
   |     -------------------- ^ the trait `for<'tcx> Foo<'tcx>` is not implemented for `F`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `want_foo_for_any_tcx`
  --> $DIR/hrtb-higher-ranker-supertraits.rs:22:15
   |
LL | fn want_foo_for_any_tcx<F>(f: &F)
   |    -------------------- required by a bound in this function
LL |     where F : for<'tcx> Foo<'tcx>
   |               ^^^^^^^^^^^^^^^^^^^ required by this bound in `want_foo_for_any_tcx`
help: consider further restricting this bound
   |
LL |     where F : Foo<'x> + for<'tcx> Foo<'tcx>
   |                       +++++++++++++++++++++

error[E0277]: the trait bound `for<'ccx> B: Bar<'ccx>` is not satisfied
  --> $DIR/hrtb-higher-ranker-supertraits.rs:35:26
   |
LL |     want_bar_for_any_ccx(b);
   |     -------------------- ^ the trait `for<'ccx> Bar<'ccx>` is not implemented for `B`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `want_bar_for_any_ccx`
  --> $DIR/hrtb-higher-ranker-supertraits.rs:39:15
   |
LL | fn want_bar_for_any_ccx<B>(b: &B)
   |    -------------------- required by a bound in this function
LL |     where B : for<'ccx> Bar<'ccx>
   |               ^^^^^^^^^^^^^^^^^^^ required by this bound in `want_bar_for_any_ccx`
help: consider further restricting this bound
   |
LL |     where B : Bar<'x> + for<'ccx> Bar<'ccx>
   |                       +++++++++++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
